<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.visitor.CheckOutFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/IvLeftArrow"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="30dp"
            android:src="@drawable/ic_left_arrow"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/visitor_details"
            android:layout_marginStart="30dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"
        android:layout_marginTop="120dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="150dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/alex_mwangi_wanjohi"
        android:textStyle="bold"
        android:inputType="textPersonName"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/id_number"
        android:layout_marginTop="210dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/_37078339"
        android:textStyle="bold"
        android:inputType="number"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mobile_number"
        android:layout_marginTop="300dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="330dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/please_provide_mobile_number"
        android:textStyle="bold"
        android:inputType="phone"
        android:textAllCaps="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/destination"
        android:layout_marginTop="390dp"
        android:layout_marginStart="30dp"/>

    <AutoCompleteTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/atv_destination"
        android:layout_marginTop="@dimen/_420dp"
        android:drawableEnd="@drawable/ic_back__1_"
        android:layout_marginStart="@dimen/_29dp"
        android:layout_marginEnd="@dimen/_15dp"
        android:hint="@string/eclectics"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/from"
        android:layout_marginTop="@dimen/_480dp"
        android:layout_marginStart="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="510dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/co_operative_bank"
        android:textStyle="bold"
        android:inputType="text"
        android:textAllCaps="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="570dp"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:hint="@string/_34_6"
        android:textStyle="bold"
        android:inputType="numberDecimal"
        android:textAllCaps="true"/>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/digital_signature"
        android:layout_marginTop="630dp"
        android:layout_marginStart="30dp"/>

    <android.gesture.GestureOverlayView
        android:id="@+id/signaturePad"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="5"
        android:layout_marginTop="@dimen/_670dp"
        android:background="@drawable/digital_signature_bg"
        android:clickable="true"
        android:eventsInterceptionEnabled="true"
        android:fadeEnabled="false"
        android:gestureColor="#0000ff"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:gestureStrokeLengthThreshold="1"
        android:gestureStrokeType="multiple"
        android:longClickable="true"
        android:orientation="vertical"
        android:uncertainGestureColor="#000000"
        android:splitMotionEvents="true"
        android:fadeOffset="10000000"
        android:focusable="true">

    </android.gesture.GestureOverlayView>

    <com.google.android.material.button.MaterialButton
        android:layout_width="330dp"
        android:layout_height="45dp"
        android:id="@+id/btnCheckOut"
        android:layout_marginTop="810dp"
        android:layout_marginStart="18dp"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="18dp"
        app:backgroundTint="@null"
        android:gravity="center"
        android:background="@drawable/button_bg"
        android:text="Check Out"
        android:textAllCaps="true"
        android:textSize="15sp"
        android:textStyle="normal"/>

</RelativeLayout>

</androidx.core.widget.NestedScrollView>
