<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/viewpager_bg"
    tools:context=".ui.auth.onboarding.Onboarding1Fragment">


    <ImageView
        android:layout_width="134dp"
        android:layout_height="75dp"
        android:id="@+id/ivG4s"
        android:src="@drawable/g4simage"
        android:layout_marginStart="120dp"
        android:layout_marginEnd="120dp"
        android:layout_marginTop="59dp"/>

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="148dp"
        android:layout_marginTop="147dp"
        android:text="@string/welcome_txt"
        android:fontFamily="@font/helvetica_regular"
        android:textColor="@color/Gray"
        android:textSize="12sp"/>

    <TextView
        android:id="@+id/tvSecurity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="126dp"
        android:layout_marginTop="172dp"
        android:text="@string/g4s_security_txt"
        android:fontFamily="@font/sf_pro_text_medium"
        android:textSize="@dimen/_20sp"
        android:textColor="@color/Red"
        android:textStyle="normal"
         />

    <TextView
        android:id="@+id/tvSecuringWorld"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:layout_marginStart="134dp"
        android:fontFamily="@font/helvetica_regular"
        android:textColor="@color/Dark"
        android:text="@string/securing_your_world_txt"
        android:textSize="12sp"/>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/pager"
        android:layout_below="@id/tvSecuringWorld"
        android:layout_width="match_parent"
        android:background="@drawable/viewpager_bg"
        android:layout_height="@dimen/_350dp" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tabDots"
        android:layout_width="wrap_content"
        android:layout_height="10dp"
        android:layout_below="@id/pager"
        android:layout_centerInParent="true"
        android:layout_centerHorizontal="true"
        android:backgroundTintMode="screen"
        android:background="@color/Grey"
        android:layout_marginTop="55dp"
        app:tabBackground="@drawable/tab_selector"
        app:tabMaxWidth="200dp"
        app:tabMinWidth="20dp"
        app:tabGravity="center"
        app:tabIndicatorHeight="0dp"/>


    <com.google.android.material.button.MaterialButton
        android:layout_width="320dp"
        android:layout_height="42dp"
        android:id="@+id/btnSetupAccount"
        android:layout_marginTop="675dp"
        android:layout_marginStart="20dp"
        app:backgroundTint="@null"
        android:gravity="center"
        android:background="@drawable/button_bg"
        android:text="@string/set_up_account_btn"
        android:textAllCaps="true"
        style="@style/ButtonFont"
        android:textStyle="normal"/>

</RelativeLayout>
<!--
</androidx.core.widget.NestedScrollView>-->
